exa: use CLAMP_TO_EDGE for RepeatPad

This fixes border rendering in some gtk3 themes.
https://bugs.freedesktop.org/show_bug.cgi?id=55310

v2 (Ben Skeggs): implement same fix for fermi/kepler too

Signed-off-by: Sebastian Keller <sebastian-keller@gmx.de>
Signed-off-by: Ben Skeggs <bskeggs@redhat.com>